Cabal-Version:        2.4
Name:                 miden-meta-compiler
Version:              0.0.1
Synopsis:             Macro assembler prototype for Miden assembly

Description:          Compile-time code generator (macro assembler) for
                      Miden VM assembly.

License:              MIT
License-file:         LICENSE
Author:               Balazs Komuves
Copyright:            (c) 2023 Balazs Komuves
Maintainer:           bkomuves (at) gmail (dot) com
Stability:            Experimental
Category:             Math, Cryptography
Tested-With:          GHC == 8.6.5, GHC == 9.0.1
Build-Type:           Simple

--------------------------------------------------------------------------------

extra-doc-files:      README.md

--------------------------------------------------------------------------------

Library

  Build-Depends:        base >= 4 && < 5, 
                        split >= 0.2,
                        containers >= 0.6, 
                        parsec1 >= 1,
                        mtl >= 2,
                        filepath >= 1.2,
                        
  Exposed-Modules:      Expr
                        Goldilocks
                        Macro
                        Parser
                        Yield

  Default-Language:     Haskell2010
  Default-Extensions:   CPP, BangPatterns, TypeApplications, KindSignatures

  Hs-Source-Dirs:       src

  ghc-options:          -fwarn-tabs -fno-warn-unused-matches -fno-warn-name-shadowing -fno-warn-unused-imports                        

--------------------------------------------------------------------------------

executable miden-macro-assembler

  main-is:              Main.hs

  Build-Depends:        base >= 4 && < 5, 
                        filepath >= 1.2,
                        miden-meta-compiler

  Hs-Source-Dirs:       cli
                        
  Default-Language:     Haskell2010
  Default-Extensions:   CPP, BangPatterns, TypeApplications, KindSignatures

--------------------------------------------------------------------------------

