Cabal-Version:        2.4
Name:                 poseidon2-bn128
Version:              0.0.1
Synopsis:             Reference implementation of Posiedon2 hash for the bn128 field

Description:          Haskell reference implementation of Posiedon2 hash for the bn128 field

License:              MIT
License-file:         LICENSE
Author:               Balazs Komuves
Maintainer:           bkomuves (at) gmail (dot) com
Stability:            Experimental
Category:             Math, Cryptography
Tested-With:          GHC == 8.6.5, GHC == 9.0.1
Build-Type:           Simple

--------------------------------------------------------------------------------

extra-doc-files:      README.md

--------------------------------------------------------------------------------

Library

  Build-Depends:        base >= 4 && < 5,
                        
  Exposed-Modules:      Example
                        BN256
                        Permutation
                        RoundConsts
                        State

  Other-modules:        Raw.Generic

  Default-Language:     Haskell2010
  Default-Extensions:   CPP, BangPatterns, TypeApplications, KindSignatures

  Hs-Source-Dirs:       src

  ghc-options:          -fwarn-tabs -fno-warn-unused-matches -fno-warn-name-shadowing -fno-warn-unused-imports                        

--------------------------------------------------------------------------------

